<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/fullView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_full_gui">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/fullViewLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="9dp"
        android:background="@drawable/detail_full_gui">

        <RelativeLayout
            android:id="@+id/checkOverlayfull"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/detail_permission_gui">
            <ImageView
                android:id="@+id/checkOverlay"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="3dp"
                android:src="@drawable/ic_cancel_stable"/>
            <TextView
                android:id="@+id/overlyTitle"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:paddingStart="5dp"
                android:text="@string/overlayPer"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/overlyDesc"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/overlyTitle"
                android:layout_toStartOf="@id/checkOverlay"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/overlayPerDesc"
                android:textColor="@color/android_def"
                android:textSize="13sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/checkStatfull"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detail_permission_gui">
            <ImageView
                android:id="@+id/checkStat"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="3dp"
                android:src="@drawable/ic_cancel_stable"/>
            <TextView
                android:id="@+id/statTitle"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:paddingStart="5dp"
                android:text="@string/statPer"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/statDesc"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/statTitle"
                android:layout_toStartOf="@id/checkStat"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/statPerDesc"
                android:textColor="@color/android_def"
                android:textSize="13sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/checkStoragefull"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detail_permission_gui">
            <ImageView
                android:id="@+id/checkStorage"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="3dp"
                android:src="@drawable/ic_cancel_stable"/>
            <TextView
                android:id="@+id/storageTitle"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:paddingStart="5dp"
                android:text="@string/storagePer"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/storageDesc"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/storageTitle"
                android:layout_toStartOf="@id/checkStorage"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/storagePerDesc"
                android:textColor="@color/android_def"
                android:textSize="13sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/checkGPSfull"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/detail_permission_gui">
            <ImageView
                android:id="@+id/checkGPS"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:padding="3dp"
                android:src="@drawable/ic_cancel_stable"/>
            <TextView
                android:id="@+id/gpsTitle"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:paddingTop="1dp"
                android:paddingBottom="1dp"
                android:paddingStart="5dp"
                android:text="@string/gpsPer"
                android:textColor="@android:color/black"
                android:textSize="21sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/gpsDesc"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/gpsTitle"
                android:layout_toStartOf="@id/checkGPS"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/gpsPerDesc"
                android:textColor="@color/android_def"
                android:textSize="13sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/generalInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/detail_share_gui">
            <Button
                android:id="@+id/twitter"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="9dp"
                android:background="@drawable/ic_share_twitter"/>
            <Button
                android:id="@+id/googleplus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="9dp"
                android:background="@drawable/ic_share_plus"/>
            <Button
                android:id="@+id/share"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_share_full"/>
            <TextView
                android:id="@+id/PermissionsInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/share"
                android:layout_centerHorizontal="true"
                android:gravity="center_vertical"
                android:text="@string/guide"
                android:textColor="@color/default_color"
                android:textSize="16sp"
                android:padding="7dp"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans_black"
        android:visibility="visible">
        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/draw_welcome"
            android:src="@drawable/ic_welcome_text"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="240dp"
            android:padding="9dp"
            android:text="@string/welcome_info"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:background="@drawable/draw_welcome_info"/>
        <Button
            android:id="@+id/skip"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:text="@string/skip"
            android:textSize="17sp"
            android:background="@drawable/ic_skip"/>

        <RelativeLayout
            android:id="@+id/gxplus"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_marginTop="360dp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:background="@drawable/draw_welcome_gx">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_share_plus"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="55dp"
                android:gravity="center_vertical"
                android:text="@string/geeksempire_plus"
                android:textColor="#DD4D40"
                android:textSize="19sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/gxtwitter"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_below="@id/gxplus"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:background="@drawable/draw_welcome_gx">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_share_twitter"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="55dp"
                android:gravity="center_vertical"
                android:text="@string/geeksempire_twitter"
                android:textColor="#5EA9DD"
                android:textSize="19sp"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>